--- a/public/indexDemo.html
+++ b/public/indexDemo.html
@@ -25,12 +25,12 @@
   <!--   <link rel="stylesheet" type="text/css" href="css/symbolset/line_fonts.css">
   <link rel="stylesheet" type="text/css" href="css/weather.css"> -->
   <link rel="stylesheet" type="text/css" href="css/base.css">
-
+<!--   <script type="text/javascript" src="scripts/sdk.js"></script> -->
 
 
   <!-- <link rel="stylesheet" type="text/css" href="css/portraitCss.css"> -->
   
-  <script>
+  <script>    
     var reloader = 0;
     setTimeout(function(){ 
       if(reloader == 0){
