--- a/public/indexDemo.html
+++ b/public/indexDemo.html
@@ -58,7 +58,7 @@
   <script src="scripts/RpiAngular2.js"></script>
   <script type="text/javascript" src="scripts/angular-ui-event/dist/event.js"></script>
 
-  <script src="scripts/angular-animate.js"></script>
+<!--   <script src="scripts/angular-animate.js"></script> -->
   <script src="scripts/require.js"></script>
   <script src="scripts/lazyload.js"></script>
 
