--- a/public/indexDemo.html
+++ b/public/indexDemo.html
@@ -38,6 +38,7 @@
       }, 10000);
     </script>
 
+    <script src="https://cdn.jwplayer.com/libraries/WZo5SBGS.js"></script>
     <script src="scripts/angular.min.js"></script>
     <script src="scripts/angular-ui-bootstrap.min.js"></script>
     <script src="scripts/angular-ui-bootstrap-tpls.min.js"></script>
