--- a/public/indexDemoPortrait.html
+++ b/public/indexDemoPortrait.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Example - example-$route-service-production</title>
 
- <!--    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Lora" rel="stylesheet">
+  <!--    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Lora" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Khand:400,600" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
@@ -13,10 +14,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 
   <link rel="stylesheet" type="text/css" href="css/fonts.css">
-  
+
   <link rel="stylesheet" type="text/css" href="css/symbolicon.css">
   <link rel="stylesheet" type="text/css" href="css/style2.css">
-<!--   <link rel="stylesheet" type="text/css" href="css/bootstrap.css"> -->
+  <!--   <link rel="stylesheet" type="text/css" href="css/bootstrap.css"> -->
   <link rel="stylesheet" type="text/css" href="css/animate.css">
   <link rel="stylesheet" type="text/css" href="css/weather-icons.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -29,17 +30,18 @@
 
 
   <!-- <link rel="stylesheet" type="text/css" href="css/portraitCss.css"> -->
-  
+
   <script>
     var reloader = 0;
-    setTimeout(function(){ 
-      if(reloader == 0){
+    setTimeout(function () {
+      if (reloader == 0) {
         location.reload();
       }
     }, 10000);
   </script>
 
-
+  <script src="scripts/jwplayer-8.10.3/jwplayer.js"></script>
+  <script>jwplayer.key = "bInoMHmcTZVDDpfDzv5iEpXe+n5WxnEIwAJHliWABYzfC5Ex";</script>
   <script src="scripts/angular.min.js"></script>
   <script src="scripts/angular-ui-bootstrap.min.js"></script>
   <script src="scripts/angular-ui-bootstrap-tpls.min.js"></script>
@@ -50,7 +52,7 @@
 
   <script type="text/javascript" src="scripts/typed.js"></script>
 
-   <script type="text/javascript" src="scripts/moment.js"></script>
+  <script type="text/javascript" src="scripts/moment.js"></script>
 
   <script src="scripts/allTemp.js"></script>
   <script src="scripts/getData.js"></script>
@@ -58,15 +60,16 @@
   <script src="scripts/RpiAngular2.js"></script>
   <script type="text/javascript" src="scripts/angular-ui-event/dist/event.js"></script>
 
- <!--  <script src="scripts/angular-animate.js"></script> -->
+  <!--  <script src="scripts/angular-animate.js"></script> -->
   <script src="scripts/require.js"></script>
   <script src="scripts/lazyload.js"></script>
 
 </head>
+
 <body ng-app="MainModule" ng-controller="MainController">
 
 
-  <div ng-include = currentTemp>
+  <div ng-include=currentTemp>
 
   </div>
 
@@ -74,5 +77,5 @@
 
 </body>
 
-  
+
 </html>
